# tun2socks5

./: Cargo.toml
.cargo/: config.toml
.github/workflows/: rust.yml
crates/execute/: Cargo.toml
crates/execute/src/: main.rs
crates/tproxy-config/: Cargo.toml
crates/tproxy-config/src/: lib.rs  linux.rs  macos.rs  windows.rs
crates/tun2socks5/: Cargo.toml
crates/tun2socks5/src/: args.rs  error.rs  http.rs  lib.rs  proxy_handler.rs  socks.rs
examples/: main.rs
scripts/: iperf3.sh  linux.sh  rperf.sh
src/: android.rs  args.rs  dns.rs  error.rs  lib.rs  main.rs  proxy_handler.rs  route_config.rs  session_info.rs  socks.rs
src/route_config/: linux.rs  macos.rs  mod.rs  windows.rs
tproxy-config/: Cargo.toml
tproxy-config/src/: lib.rs  linux.rs  macos.rs  windows.rs
