[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
tokio = { version = "1.34", features = ["full"] }
tun = { git = "https://github.com/ssrlive/rust-tun.git", features = ["async"] }
clap = { version = "4.4", features = ["derive"] }
log = "0.4"
ctrlc2 = { version = "3.5", features = ["tokio", "termination"] }