[workspace]
resolver = "2"
members = ["tproxy-config"]

[package]
name = "tun2socks5"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0"
async-trait = "0.1"
base64 = { version = "0.21" }
clap = { version = "4.4", features = ["derive", "wrap_help", "color"] }
digest_auth = "0.3"
httparse = "1.8"
ipstack = { git = "https://github.com/ssrlive/ipstack.git" }
log = "0.4"
socks5-impl = { version = "0.5" }
thiserror = "1.0"
tokio = { version = "1.34", features = ["full"] }
tproxy-config = { path = "tproxy-config" }
trust-dns-proto = "0.23"
udp-stream = { version = "0.0", default-features = false }
unicase = "2.7"
url = "2.5"

[dev-dependencies]
ctrlc2 = { version = "3.5", features = ["tokio", "termination"] }
dotenvy = "0.15"
env_logger = "0.10"
tproxy-config = { path = "tproxy-config" }
tun = { git = "https://github.com/ssrlive/rust-tun.git", features = ["async"] }

[[example]]
name = "tun2socks5"
path = "examples/main.rs"
