[package]
name = "tproxy-config"
version = "0.1.0"
edition = "2021"

[features]
log = ["dep:log"]

[dependencies]
log = { version = "0.4", optional = true }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_os = "macos")'.dependencies]
resolv-conf = "0.7"
