[package]
name = "execute"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
tun = { workspace = true }
tproxy-config = { path = "../tproxy-config" }
clap = { workspace = true  }
log =  { workspace = true  }
tun2socks5 = {path = "../tun2socks5"}
dotenvy = "0.15"
ctrlc2 = { workspace =true }
env_logger = "0.10"
