[package]
name = "execute"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc2 = { version = "3.5", features = ["tokio", "termination"] }
dotenvy = "0.15"
env_logger = "0.10"
log = { workspace = true }
tokio = { workspace = true }
tproxy-config = { path = "../tproxy-config" }
tun = { git = "https://github.com/ssrlive/rust-tun.git", features = ["async"] }
tun2socks5 = { path = "../tun2socks5" }
